--- a/SimpleWeather.UWP/Main/WeatherNow.xaml
+++ b/SimpleWeather.UWP/Main/WeatherNow.xaml
@@ -109,7 +109,7 @@
                     </Setter.Value>
                 </Setter>
             </Style>
-            <Style TargetType="Button" x:Key="AlertButtonRevealStyle">
+            <Style TargetType="Button" x:Key="AlertButtonRevealStyle" BasedOn="{StaticResource AccentButtonRevealStyle}">
                 <Setter Property="Background">
                     <Setter.Value>
                         <RevealBackgroundBrush TargetTheme="Dark" Color="OrangeRed" FallbackColor="OrangeRed" />
@@ -147,11 +147,11 @@
                                                 <Setter Target="RootGrid.(RevealBrush.State)" Value="PointerOver" />
                                                 <Setter Target="RootGrid.Background">
                                                     <Setter.Value>
-                                                        <RevealBackgroundBrush TargetTheme="Dark" Color="Red" FallbackColor="Red" />
+                                                        <RevealBackgroundBrush TargetTheme="Dark" Color="#FFFF5A00" FallbackColor="#FFFF5A00" />
                                                     </Setter.Value>
                                                 </Setter>
                                                 <Setter Target="ContentPresenter.BorderBrush" Value="{ThemeResource ButtonRevealBorderBrushPointerOver}" />
-                                                <Setter Target="ContentPresenter.Foreground" Value="{ThemeResource ButtonForegroundPointerOver}" />
+                                                <Setter Target="ContentPresenter.Foreground" Value="{ThemeResource SystemControlBackgroundChromeWhiteBrush}" />
                                             </VisualState.Setters>
 
                                             <Storyboard>
@@ -164,11 +164,11 @@
                                                 <Setter Target="RootGrid.(RevealBrush.State)" Value="Pressed" />
                                                 <Setter Target="RootGrid.Background">
                                                     <Setter.Value>
-                                                        <RevealBackgroundBrush TargetTheme="Dark" Color="Red" FallbackColor="Red" />
+                                                        <RevealBackgroundBrush TargetTheme="Dark" Color="#FFFF5A00" FallbackColor="#FFFF5A00" />
                                                     </Setter.Value>
                                                 </Setter>
                                                 <Setter Target="ContentPresenter.BorderBrush" Value="{ThemeResource ButtonRevealBorderBrushPressed}" />
-                                                <Setter Target="ContentPresenter.Foreground" Value="{ThemeResource ButtonForegroundPressed}" />
+                                                <Setter Target="ContentPresenter.Foreground" Value="{ThemeResource SystemControlBackgroundChromeWhiteBrush}" />
                                             </VisualState.Setters>
 
                                             <Storyboard>
@@ -180,13 +180,13 @@
                                             <VisualState.Setters>
                                                 <Setter Target="RootGrid.Background" Value="{ThemeResource ButtonRevealBackgroundDisabled}" />
                                                 <Setter Target="ContentPresenter.BorderBrush" Value="{ThemeResource ButtonRevealBorderBrushDisabled}" />
-                                                <Setter Target="ContentPresenter.Foreground" Value="{ThemeResource ButtonForegroundDisabled}" />
+                                                <Setter Target="ContentPresenter.Foreground" Value="{ThemeResource SystemControlDisabledBaseMediumLowBrush}" />
                                             </VisualState.Setters>
                                         </VisualState>
                                     </VisualStateGroup>
                                 </VisualStateManager.VisualStateGroups>
-                                <ContentControl x:Name="ContentPresenter" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" ContentTransitions="{TemplateBinding ContentTransitions}" ContentTemplate="{TemplateBinding ContentTemplate}" Padding="{TemplateBinding Padding}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" AutomationProperties.AccessibilityView="Raw">
-                                    <Grid Width="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=Width, Mode=OneWay}">
+                                <ContentControl x:Name="ContentPresenter" ContentTransitions="{TemplateBinding ContentTransitions}" ContentTemplate="{TemplateBinding ContentTemplate}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}">
+                                    <Grid CornerRadius="{TemplateBinding CornerRadius}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}" AutomationProperties.AccessibilityView="Raw">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="*" />
@@ -194,7 +194,7 @@
                                         </Grid.ColumnDefinitions>
                                         <FontIcon Glyph="&#xE783;" FontFamily="Segoe MDL2 Assets" Grid.Column="0" Margin="5,2,5,0" />
                                         <TextBlock x:Uid="Label_WeatherAlerts" Text="Severe Weather Alerts" Grid.Column="1" FontSize="12" Foreground="White" Padding="5,0" VerticalAlignment="Center" />
-                                        <FontIcon Glyph="&#xE76C;" FontFamily="Segoe MDL2 Assets" Grid.Column="2" FontSize="12" Margin="5,0" VerticalAlignment="Center" />
+                                        <FontIcon Glyph="&#xE76C;" FontFamily="Segoe MDL2 Assets" Grid.Column="2" FontSize="12" Margin="5,0" HorizontalAlignment="Right" VerticalAlignment="Center" />
                                     </Grid>
                                 </ContentControl>
                             </Grid>
@@ -217,10 +217,12 @@
 
     <Grid x:Name="MainGrid" Background="{ThemeResource RegionBrush}">
         <toolkitControls:ImageEx x:Name="BackgroundOverlay" CachingStrategy="Custom" IsCacheEnabled="True" DecodePixelWidth="960"
-                                             x:Load="{x:Bind WeatherView.ImageData.ImageUri, Mode=OneWay, Converter={StaticResource stringBooleanConverter}, TargetNullValue=false, FallbackValue=false}"
-                                             Source="{x:Bind WeatherView.ImageData.ImageUri, Mode=OneWay}"
-                                             ImageExOpened="BackgroundOverlay_ImageExOpened"
-                                             Stretch="UniformToFill" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                                 x:Load="{x:Bind WeatherView.ImageData.ImageUri, Mode=OneWay, Converter={StaticResource stringBooleanConverter}, TargetNullValue=false, FallbackValue=false}"
+                                 Source="{x:Bind WeatherView.ImageData.ImageUri, Mode=OneWay}"
+                                 Foreground="{ThemeResource SimpleBlueBrush}"
+                                 ImageExOpened="BackgroundOverlay_ImageExOpened"
+                                 Stretch="UniformToFill" VerticalAlignment="Center" HorizontalAlignment="Center"
+                                 Style="{StaticResource ImageExProgressStyle}" />
         <Grid x:Name="GradientOverlay" Grid.RowSpan="7" Visibility="Collapsed">
             <Grid.Background>
                 <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1" SpreadMethod="Pad">
@@ -240,7 +242,7 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <Grid x:Name="ConditionPanel" RequestedTheme="Dark" Grid.Row="0">
+                <Grid x:Name="ConditionPanel" RequestedTheme="Dark" Grid.Row="0" Padding="16,0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -296,7 +298,7 @@
                                      NavigateUri="{x:Bind WeatherView.ImageData.OriginalLink, Mode=OneWay}"
                                      Grid.Row="7" Style="{ThemeResource AttributionStyle}">
                         <HyperlinkButton.Content>
-                            <toolkitControls:DropShadowPanel BlurRadius="15.0" ShadowOpacity="1" Margin="16,0">
+                            <toolkitControls:DropShadowPanel BlurRadius="15.0" ShadowOpacity="1">
                                 <TextBlock>
                                     <Span><Run Text="Photo by " /><Run Text="{x:Bind WeatherView.ImageData.ArtistName, Mode=OneWay}" /><Run Text=" on " /><Run Text="{x:Bind WeatherView.ImageData.SiteName, Mode=OneWay}" /></Span>
                                 </TextBlock>
