--- a/SimpleWeather.UWP/Themes/Generic.xaml
+++ b/SimpleWeather.UWP/Themes/Generic.xaml
@@ -324,9 +324,6 @@
                                 <VisualState x:Name="Disabled">
 
                                     <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="HeaderContentPresenter" Storyboard.TargetProperty="Foreground">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource TextControlHeaderForegroundDisabled}" />
-                                        </ObjectAnimationUsingKeyFrames>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BorderElement" Storyboard.TargetProperty="Background">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource TextControlBackgroundDisabled}" />
                                         </ObjectAnimationUsingKeyFrames>
@@ -407,13 +404,8 @@
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
 
                         <Border x:Name="BorderElement"
-                            Grid.Row="1"
                             Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
@@ -422,7 +414,6 @@
                             contract7Present:CornerRadius="{TemplateBinding CornerRadius}"
                             contract7NotPresent:CornerRadius="{ThemeResource ControlCornerRadius}" />
                         <ScrollViewer x:Name="ContentElement"
-                            Grid.Row="1"
                             HorizontalScrollMode="{TemplateBinding ScrollViewer.HorizontalScrollMode}"
                             HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
                             VerticalScrollMode="{TemplateBinding ScrollViewer.VerticalScrollMode}"
@@ -436,7 +427,6 @@
                             AutomationProperties.AccessibilityView="Raw"
                             ZoomMode="Disabled" />
                         <ContentControl x:Name="PlaceholderTextContentPresenter"
-                            Grid.Row="1"
                             Foreground="{ThemeResource TextControlPlaceholderForeground}"
                             Margin="{TemplateBinding BorderThickness}"
                             Padding="{TemplateBinding Padding}"
@@ -445,7 +435,6 @@
                             Content="{TemplateBinding PlaceholderText}"
                             IsHitTestVisible="False" />
                         <Button x:Name="DeleteButton"
-                            Grid.Row="1"
                             Style="{StaticResource DeleteButtonStyle}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             contract7Present:CornerRadius="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=CornerRadius, Converter={StaticResource RightCornerRadiusFilterConverter}}"
@@ -457,7 +446,6 @@
                             AutomationProperties.AccessibilityView="Raw"
                             VerticalAlignment="Stretch" />
                         <Button x:Name="QueryButton"
-                            Grid.Row="1"
                             contract7Present:CornerRadius="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=CornerRadius, Converter={StaticResource RightCornerRadiusFilterConverter}}"
                             Style="{StaticResource QueryButtonStyle}"
                             BorderThickness="{TemplateBinding BorderThickness}"
@@ -470,7 +458,14 @@
                             VerticalAlignment="Stretch"
                             AutomationProperties.AccessibilityView="Raw" />
                         <!-- HAXX Workaround -->
-                        <ContentControl x:Name="ProgressRingContentPresenter" Grid.Column="3" Content="{TemplateBinding Tag}" Visibility="Collapsed" Foreground="{ThemeResource SystemControlForegroundAccentBrush}" MinHeight="34" MinWidth="0" Grid.Row="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="0,0,2.45,0" />
+                        <ContentControl x:Name="ProgressRingContentPresenter"
+                            Content="{TemplateBinding Tag}"
+                            Foreground="{ThemeResource SystemControlForegroundAccentBrush}"
+                            Grid.Column="3"
+                            MinHeight="34"
+                            MinWidth="0"
+                            HorizontalContentAlignment="Center"
+                            VerticalContentAlignment="Center" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
@@ -512,6 +507,7 @@
                        Padding="5,15" Visibility="{Binding RelativeSource={RelativeSource Mode=Self}, Path=Text, Converter={StaticResource stringVisibilityConverter}}" />
             <TextBox x:Name="TextBox"
                      Style="{TemplateBinding TextBoxStyle}"
+                     Tag="{TemplateBinding Tag}"
                      PlaceholderText="{TemplateBinding PlaceholderText}"
                      Header="{TemplateBinding Header}"
                      Width="{TemplateBinding Width}"
@@ -578,7 +574,7 @@
                                         Template="{ThemeResource AutoSuggestBoxTemplate}">
                             <!-- HAXX Workaround -->
                             <AutoSuggestBox.Tag>
-                                <ProgressRing x:Name="LoadingRing" Foreground="{ThemeResource SystemControlForegroundAccentBrush}" Margin="7.5,0"
+                                <ProgressRing x:Name="LoadingRing" Foreground="{ThemeResource SystemControlForegroundAccentBrush}" Margin="10,0,12,0"
                                               Visibility="{Binding ElementName=LoadingRing, Path=IsActive, Mode=OneWay, FallbackValue='Collapsed'}" IsActive="False" />
                             </AutoSuggestBox.Tag>
                             <!-- HAXX Workaround: Is actually the footer -->
