--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -6,6 +6,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    xmlns:toolkitConverters="using:Microsoft.Toolkit.Uwp.UI.Converters"
+    xmlns:uwpUtils="using:SimpleWeather.UWP.Utils"
     mc:Ignorable="d"
     d:DesignHeight="120"
     d:DesignWidth="720"
@@ -27,7 +29,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid x:Name="MainGrid" Background="{ThemeResource SystemAccentColor}" RequestedTheme="Dark"
+    <Grid x:Name="MainGrid" Background="{ThemeResource SystemAccentColorLight2}" RequestedTheme="Dark"
           CornerRadius="2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -38,10 +40,16 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <toolkitControls:ImageEx CachingStrategy="Custom" IsCacheEnabled="True" DecodePixelWidth="1080" Source="{x:Bind ViewModel.ImageData.ImageUri, Mode=OneWay}" Foreground="White"
-                                 Stretch="UniformToFill" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{ThemeResource ImageExProgressStyle}"
+        <toolkitControls:ImageEx x:Name="BackgroundOverlay" CachingStrategy="Custom" IsCacheEnabled="True" DecodePixelWidth="720"
+                                 Source="{x:Bind ViewModel.ImageData.ImageUri, Mode=OneWay}"
+                                 x:Load="{x:Bind uwpUtils:FeatureSettings.LocationPanelBackgroundImage, Mode=OneWay}"
+                                 Foreground="White"
+                                 Stretch="UniformToFill"
+                                 VerticalAlignment="Center" HorizontalAlignment="Center"
+                                 Style="{ThemeResource ImageExProgressStyle}"
                                  Grid.ColumnSpan="3" Grid.RowSpan="2" />
-        <Grid x:Name="GradientOverlay" Grid.ColumnSpan="3" Grid.RowSpan="2">
+        <Grid x:Name="GradientOverlay" Grid.ColumnSpan="3" Grid.RowSpan="2"
+              x:Load="{x:Bind uwpUtils:FeatureSettings.LocationPanelBackgroundImage, Mode=OneWay}">
             <Grid.Background>
                 <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1" SpreadMethod="Pad">
                     <LinearGradientBrush.GradientStops>
@@ -54,7 +62,8 @@
         </Grid>
         <ProgressRing Grid.ColumnSpan="3" Grid.RowSpan="2" IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" Foreground="White" />
         <toolkitControls:DropShadowPanel BlurRadius="15.0"
-                                         ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}"
+                                         ShadowOpacity="{ThemeResource DropShadowOpacity}"
+                                         Color="{ThemeResource DropShadowColorBrush}"
                                          VerticalAlignment="Center" Margin="10,5,10,0"
                                          Grid.ColumnSpan="3" Grid.Row="0">
             <TextBlock x:Name="LocationName" Text="{x:Bind ViewModel.LocationName, FallbackValue='San Fernando del Valle de Catamarca, Argentina', Mode=OneWay}"
@@ -65,25 +74,29 @@
                     HorizontalAlignment="Left" VerticalAlignment="Center"
                     Margin="5,0">
             <toolkitControls:DropShadowPanel BlurRadius="15.0"
-                                             ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}"
+                                             ShadowOpacity="{ThemeResource DropShadowOpacity}"
+                                             Color="{ThemeResource DropShadowColorBrush}"
                                              VerticalAlignment="Center">
                 <TextBlock x:Name="CurrentTemp" Text="{x:Bind ViewModel.CurrTemp, FallbackValue='70º', Mode=OneWay}"
                            FontSize="36" FontWeight="Medium" Style="{StaticResource WeatherIcon}" Padding="5,0" />
             </toolkitControls:DropShadowPanel>
             <toolkitControls:DropShadowPanel BlurRadius="15.0"
-                                             ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}">
+                                             ShadowOpacity="{ThemeResource DropShadowOpacity}"
+                                             Color="{ThemeResource DropShadowColorBrush}">
                 <TextBlock x:Name="CurWeather" Text="{x:Bind ViewModel.CurrWeather, Mode=OneWay, FallbackValue='Mostly Cloudy'}"
                            FontSize="16" FontWeight="Medium" MaxLines="1" Padding="5,0"
                            MaxWidth="200" TextTrimming="WordEllipsis" />
             </toolkitControls:DropShadowPanel>
         </StackPanel>
         <toolkitControls:DropShadowPanel BlurRadius="15.0"
-                                             ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}"
-                                             VerticalAlignment="Center" HorizontalAlignment="Right"
-                                             Grid.Row="1" Grid.Column="1" Margin="10,0">
-            <TextBlock x:Name="HiLoTemp" FontSize="20" FontWeight="Medium" Style="{ThemeResource WeatherIcon}"
-                           HorizontalTextAlignment="Right"
-                           Visibility="{x:Bind ViewModel.HiTemp, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
+                                         ShadowOpacity="{ThemeResource DropShadowOpacity}"
+                                         Color="{ThemeResource DropShadowColorBrush}"
+                                         VerticalAlignment="Center" HorizontalAlignment="Right"
+                                         Grid.Row="1" Grid.Column="1" Margin="10,0">
+            <TextBlock x:Name="HiLoTemp" FontSize="20" FontWeight="Medium"
+                       Style="{ThemeResource WeatherIcon}"
+                       HorizontalTextAlignment="Right"
+                       Visibility="{x:Bind ViewModel.HiTemp, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
                     <Span><Run Text="{x:Bind ViewModel.HiTemp, Mode=OneWay, FallbackValue='80º', TargetNullValue='--'}" /><Run Text=" &#xf058;" /></Span>
                     <LineBreak />
                     <Span><Run Text="{x:Bind ViewModel.LoTemp, Mode=OneWay, FallbackValue='65º', TargetNullValue='--'}" /><Run Text=" &#xf044;" /></Span>
@@ -91,20 +104,21 @@
         </toolkitControls:DropShadowPanel>
         <StackPanel Grid.Row="1" Grid.Column="2" Margin="10,0" VerticalAlignment="Center" HorizontalAlignment="Center">
             <StackPanel Orientation="Horizontal"
-                            VerticalAlignment="Center" HorizontalAlignment="Left"
-                            Visibility="{x:Bind ViewModel.PoP, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}"
-                            Grid.Column="1">
+                        VerticalAlignment="Center" HorizontalAlignment="Left"
+                        Visibility="{x:Bind ViewModel.PoP, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}"
+                        Grid.Column="1">
                 <toolkitControls:DropShadowPanel BlurRadius="15.0"
-                                                     ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}">
+                                                 ShadowOpacity="{ThemeResource DropShadowOpacity}"
+                                                 Color="{ThemeResource DropShadowColorBrush}">
                     <TextBlock FontSize="20" FontWeight="Medium" Style="{ThemeResource WeatherIcon}"
-                                   Text="{x:Bind ViewModel.PoPIcon, Mode=OneWay, FallbackValue='&#xf084;'}"
-                                   Width="35">
+                               Text="{x:Bind ViewModel.PoPIcon, Mode=OneWay, FallbackValue='&#xf084;'}"
+                               Width="35">
                     </TextBlock>
                 </toolkitControls:DropShadowPanel>
                 <toolkitControls:DropShadowPanel BlurRadius="15.0"
-                                                     ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}">
-                    <TextBlock x:Name="PoPCondition" FontSize="20" FontWeight="Medium" Style="{ThemeResource WeatherIcon}"
-                                   Padding="5,0">
+                                                 ShadowOpacity="{ThemeResource DropShadowOpacity}"
+                                                 Color="{ThemeResource DropShadowColorBrush}">
+                    <TextBlock x:Name="PoPCondition" FontSize="20" FontWeight="Medium" Style="{ThemeResource WeatherIcon}" Padding="5,0">
                             <Span>
                                 <Run Text="{x:Bind ViewModel.PoP, FallbackValue='70%', TargetNullValue='--', Mode=OneWay}" />
                             </Span>
@@ -112,23 +126,24 @@
                 </toolkitControls:DropShadowPanel>
             </StackPanel>
             <StackPanel Orientation="Horizontal"
-                            VerticalAlignment="Center" HorizontalAlignment="Left"
-                            Visibility="{x:Bind ViewModel.WindSpeed, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}"
-                            Grid.Column="1">
+                        VerticalAlignment="Center" HorizontalAlignment="Left"
+                        Visibility="{x:Bind ViewModel.WindSpeed, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}"
+                        Grid.Column="1">
                 <toolkitControls:DropShadowPanel BlurRadius="15.0"
-                                                     ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}">
+                                                 ShadowOpacity="{ThemeResource DropShadowOpacity}"
+                                                 Color="{ThemeResource DropShadowColorBrush}">
                     <TextBlock FontSize="18" FontWeight="Medium" Style="{ThemeResource WeatherIcon}"
-                                   Text="&#xf058;" RenderTransformOrigin="0.5,0.5" Width="35">
+                               Text="&#xf058;" RenderTransformOrigin="0.5,0.5" Width="35">
                         <TextBlock.RenderTransform>
                             <RotateTransform Angle="{x:Bind ViewModel.WindDirection, Mode=OneWay, FallbackValue='90'}" />
                         </TextBlock.RenderTransform>
                     </TextBlock>
                 </toolkitControls:DropShadowPanel>
                 <toolkitControls:DropShadowPanel BlurRadius="15.0"
-                                                     ShadowOpacity="{ThemeResource DropShadowOpacity}" Color="{ThemeResource DropShadowColorBrush}">
+                                                 ShadowOpacity="{ThemeResource DropShadowOpacity}"
+                                                 Color="{ThemeResource DropShadowColorBrush}">
                     <TextBlock x:Name="WindCondition" FontSize="20" FontWeight="Medium" Style="{ThemeResource WeatherIcon}"
-                                   Text="{x:Bind ViewModel.WindSpeed, Mode=OneWay, FallbackValue='7 mph'}"
-                                   Padding="5,0" />
+                               Text="{x:Bind ViewModel.WindSpeed, Mode=OneWay, FallbackValue='7 mph'}" Padding="5,0" />
                 </toolkitControls:DropShadowPanel>
             </StackPanel>
         </StackPanel>
